<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ldrobot_ld07</name>
  <version>0.1.0</version>
  <description>ROS2 driver for LDRobot LD07 solid-state LiDAR (90° FOV, 5–400 mm)</description>
  <maintainer email="valentin.shevchenko@gmail.com">Valentyn Shevchenko</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
